@@ -1,0 +1,4 @@
+<doc xmlns:xi="http://www.w3.org/2001/XInclude">
+<foo/>
+<xi:include href="test.xml" />
+</doc>
